[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "canopen-asyncio"
authors = [
    # This fork is solely maintained by Svein Seldal, but the original
    # authors are listed here for reference.
    # {name = "Christian Sandberg", email = "christiansandberg@me.com"},
    # {name = "André Colomb", email = "src@andre.colomb.de"},
    # {name = "André Filipe Silva", email = "afsilva.work@gmail.com"},
    {name = "Svein Seldal", email = "sveinse@seldal.com"},
]
description = "CANopen stack implementation for asyncio"
readme = "README.rst"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE.txt"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "python-can >= 3.0.0",
]
dynamic = ["version"]

[project.optional-dependencies]
db_export = [
    "canmatrix ~= 1.0",
]

[project.urls]
documentation = "https://canopen.readthedocs.io/en/stable/"
repository = "https://github.com/sveinse/canopen-asyncio"

[tool.hatch]
version.source = "vcs"
build.hooks.vcs.version-file = "canopen/_version.py"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"

[tool.hatch.build.targets.wheel]
packages = ["canopen"]

[tool.hatch.build.targets.wheel.sources]
"canopen" = "canopen_asyncio"

[tool.hatch.build.targets.sdist]
include = [
  "canopen/*.py",
  "canopen/*/*.py",
  "canopen/*/*/*.py",
  "/test",
  "/doc",
]

[tool.setuptools_scm]
version_file = "canopen/_version.py"

[tool.pytest.ini_options]
testpaths = [
    "test",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.mypy]
python_version = "3.9"
exclude = [
    "^examples*",
    "^test*",
    "^setup.py*",
]

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_also = [
    'if TYPE_CHECKING:',
]
